[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sprites/characterSelectionSprites/girlInitialScreen.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/design.graffiti.SNAP____.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/InitialScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/characterSelectionSprites/boyInitialScreen.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/boyQuizSprites/answersPanel.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/characterSelectionSprites/initialScreenBackground.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/characterSelectionSprites/phrase.png" type="Texture" id=7]

[sub_resource type="Animation" id=2]
resource_name = "BlinkANimation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("blinkLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "BlinkScreen"
tracks/0/type = "value"
tracks/0/path = NodePath("BlinkScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ), Color( 0.207843, 0.0352941, 0.0352941, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 2 )

[node name="InitialScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 6 )

[node name="BoyImage" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 396.0
margin_bottom = 704.0
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GirlImage" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -144.0
margin_bottom = -256.0
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blinkLabel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -144.0
margin_bottom = -256.0
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoyButton" type="Button" parent="."]
margin_left = 84.0
margin_top = 61.0
margin_right = 131.0
margin_bottom = 200.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GirlButton" type="Button" parent="."]
margin_left = 22.0
margin_top = 61.0
margin_right = 58.0
margin_bottom = 197.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startButton" type="Button" parent="."]
margin_left = 12.7526
margin_top = 214.698
margin_right = 132.753
margin_bottom = 244.698
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animator" type="AnimationPlayer" parent="."]
anims/BlinkANimation = SubResource( 2 )
anims/BlinkScreen = SubResource( 3 )

[node name="BlinkScreen" type="Panel" parent="."]
modulate = Color( 0.207843, 0.0352941, 0.0352941, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="registerButton" type="Button" parent="."]
visible = false
margin_left = 3.5
margin_right = 68.5
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="registerButton"]
position = Vector2( 32.8725, 10.7999 )
scale = Vector2( 0.055064, 0.10289 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="registerButton"]
margin_top = 1.0
margin_right = 65.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Registrar"
align = 1
valign = 1
autowrap = true

[node name="loginButton" type="Button" parent="."]
visible = false
margin_left = 74.332
margin_right = 139.332
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="loginButton"]
position = Vector2( 32.8725, 10.7999 )
scale = Vector2( 0.055064, 0.10289 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="loginButton"]
margin_top = 1.0
margin_right = 65.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Entrar"
align = 1
valign = 1
autowrap = true
[connection signal="pressed" from="BoyButton" to="." method="onBoyButtonPressed"]
[connection signal="pressed" from="GirlButton" to="." method="onGirlButtonPressed"]
[connection signal="pressed" from="registerButton" to="." method="onRegisterPressed"]
[connection signal="pressed" from="loginButton" to="." method="onLoginPressed"]
